# static-program-analyser

./: .gitignore  Contact.csv  README.md  run-500-autotester.bat  run-autotester.bat  run-stress-100.bat  run-stress-100Ultimate.bat  run-stress-250.bat  run-stress-250Ultimate.bat  run-stress-500Ultimate.bat  run-system-tests-raw.py  run-system-tests.py
.github/workflows/: cmake.yml
Team02/Code02/: CMakeLists.txt
Team02/Code02/src/integration_testing/: CMakeLists.txt
Team02/Code02/src/integration_testing/src/: TestFrontEnd.cpp  TestTokenizerParser.cpp
Team02/Code02/src/integration_testing/src/Front-End/: TestParserDEPKBGeneral.cpp
Team02/Code02/src/integration_testing/src/Query/: TestLexerParser.cpp  TestLexerParserPattern.cpp  TestLexerParserWith.cpp  TestQueryUtil.cpp  TestQueryUtil.h
Team02/Code02/src/integration_testing/src/Query/Evaluator/: TestQueryEvaluatorPKBGeneral.cpp  TestQueryEvaluatorPKBMultiClause.cpp  TestQueryEvaluatorPKBSingleClause.cpp
Team02/Code02/src/integration_testing/src/Query/LexerParserSuchThatRelationships/: TestLexerParserAffectsAffectsT.cpp  TestLexerParserCallsCallsT.cpp  TestLexerParserFollowsFollowsT.cpp  TestLexerParserModifies.cpp  TestLexerParserNextNextT.cpp  TestLexerParserParentParentT.cpp  TestLexerParserUses.cpp
Team02/Code02/src/integration_testing/src/Query/Optimizer/: TestQueryOptimizer.cpp
Team02/Tests02/: AffectsAlgoTest_queries.txt  AffectsBipFunctionalTest_queries.txt  AffectsFunctionalTest_queries.txt  AffectsFunctionalTest_source.txt  AffectsTAlgoTest_queries.txt  AffectsTAlgoTest_source.txt  (+83 more)
(+249 files in other folders)
